# mots_fleches

./: .gitignore  Dockerfile  README.md  docker-compose.yml  func.py  gorafi_ia_prompt.txt  horoscope_ia_prompt.txt  horoscope_ia_prompt_back.txt  horoscope_ia_prompt_bigard.txt  horoscope_ia_prompt_dino.txt  image_au_pif.py  main.py  national_geographic.json  pyproject.toml  style.css
html/: style.css
html/static/: style.css
templates/: test.html
