[tool.poetry]
name = "mots-fleches"
version = "0.1.0"
description = ""
authors = ["clement sergent <clement.sergent@corp.ovh.com>"]
readme = "README.md"
packages = [{include = "mots_fleches"}]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.13.0"
bs4 = "^0.0.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
