[tool.poetry]
name = "mots-fleches"
version = "0.1.0"
description = ""
authors = ["clement <clementsergent@yahoo.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.13.0"
bs4 = "^0.0.1"
requests = "^2.31.0"
openai = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
